# starfish

./: .dockerignore  .envrc  .eslintrc.js  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.postgres  Dockerfile.server  Procfile  README.md  Rocket.toml  build.rs  docker-compose.dev.yml  docker-compose.yml  known_hosts  package-lock.json  package.json  rustfmt.toml  shell.nix  sqlx-data.json  tsconfig.json  webpack.config.js
.sqlx/: query-10f7efea6daa7dff7fc9e2d597f122ded117b2c720040e0d05ee1a7d23782da7.json  query-17b34f406b5c696e9bc304d886cd20195a9ceea436fe640921086b5a3032c4b6.json  query-28cb5df54bd15e9c428693d8d1d5188fa5f15577eba973bb9c6c2ab9aed30c5d.json  query-2d6c856b3a67821b56247d7a2a7c2f0f83dc67fb229684badec951a0449f69e7.json  query-2fdc36a8373cf7de74277e7904d57cca0ecd2aef5b1f62048168652df69e7eed.json  query-4e9625fedb23fbe4ac92a8801bdf7d66d963c440dbb0364c737c98c320e59e6f.json  query-5434344484aa0bcd8dca7674f94bcd9e052fe4af385db3096f5f5be413230c36.json  query-55ada058538155fba3f8d3c539e735283f1903a37ffc5a458e75090afce88a16.json  query-57a162f91c7a793889dfe5318f426e5e7d19ac4b4eb2ea6e7d384a1fef6b8e4a.json  query-6894996e954452e3e9f04706554d28e234ead3c5664ed399dfa03eef29b43981.json  query-74abf99c060591703357c8b2194087e7bc5f67d08a475fb8150217fce64daa36.json  query-b7197ea5729e83c7a335383dbdf6e01444f2f136b722f29ad9b2e2328b0d3ee5.json  query-b933bef360d91e7ed09a9c5f167d7cd0b89e41d3a7316c1c5453bc42c468d8d0.json  query-cf5bd1e15ba3d380d059373b9b82486c728fbfd1c034dc53a675dd44d53ae02a.json
common/: Cargo.toml  build.rs
common/src/: lib.rs
config/: default.toml  development.toml  production.toml  web.development.toml  web.production.toml  web.sample.toml  web.toml  worker.development.toml  worker.production.toml  worker.sample.toml  worker.toml
config/dev/: web.toml  worker.toml
config/production/: web.toml  worker.toml
config/web/: default.toml  development.toml  production.toml
config/worker/: default.toml  development.toml  production.toml
css/: main.scss  main.scss.d.ts
js/: api.tsx  index.tsx  style.tsx  util.tsx
js/components/: Build.tsx  Footer.tsx  Home.tsx  Nav.tsx  NewBuild.tsx
js/typings/: index.d.ts
migrations/: 20210923211042_initial.down.sql  20210923211042_initial.up.sql  20210927182826_cascade.down.sql  20210927182826_cascade.up.sql  20211005194334_onestep.down.sql  20211005194334_onestep.up.sql
src/: config.rs  lib.rs  logger.rs  pidfile.rs
templates/: nix.conf
web/: Cargo.toml
web/src/: cfg.rs  main.rs  tail.rs
worker/: Cargo.toml
worker/src/: cfg.rs  logger.rs  main.rs  scripts.rs
worker/templates/: index.html  nix.conf
worker/templates/post-build/: none.sh  s3.sh
