[package]
name = "starfish"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-files = "0.6.2"
actix-web-lab = "0.19.1"
actix-web = "4.3.1"
anyhow = "1.0.66"
askama = "0.12.0"
config = "0.13.3"
env_logger = "0.10.0"
futures-util = "0.3.26"
inotify = "0.10.0"
itertools = "0.10.5"
libc = "0.2.136"
log = "0.4.17"
mime = "0.3.16"
nix = "0.26.2"
rust-crypto = "0.2.36"
serde = "1.0.154"
serde_json = "1.0.94"
tempfile = "3.3.0"
tokio = "1.26.0"

[dependencies.sqlx]
version = "0.6.2"
features = ["chrono", "offline", "postgres", "runtime-actix-rustls"]

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[build-dependencies]
pkg-config = "0.3.25"
vergen = "7.4.2"

[profile.release]
debug = true

[profile.dev.package.sqlx-macros]
opt-level = 3
