[package]
name = "starfish-common"
version = "0.1.0"
edition = "2021"
author = "Jude Taylor <me@jude.xyz>"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["chrono", "postgres", "runtime-tokio"] }

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "git2"] }
