[package]
name = "starfish-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
askama = "0.12.0"
common = { path = "../common", package = "starfish-common" }
env_logger = "0.10.0"
futures-util = "0.3.28"
inotify = "0.10.2"
log = "0.4.20"
mime = "0.3.17"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["chrono", "postgres", "runtime-tokio"] }
