[package]
name = "starfish-worker"
version = "0.1.0"
edition = "2021"
authors = ["Jude Taylor <me@jude.xyz>"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
askama = "0.12.0"
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = "0.4.26"
common = { path = "../common", package = "starfish-common" }
futures-util = "0.3.28"
log = "0.4.20"
nix = "0.26.2"
serde = { version = "1.0.183", features = ["derive"] }
sha1 = "0.10.5"
sqlx = { version = "0.7.1", features = ["chrono", "postgres", "runtime-tokio"] }
tempfile = "3.7.1"
tokio = { version = "1.32.0", features = ["full"] }
